Mise en place du système d'ouverture des onglets version mobile, correction de certains alignements

--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ div.click > .clickable {
 }
 
 .paragraphe_accueil{
-	margin-top: 500px!important;
+	margin-top: 44vh!important;
 }
 
 .align{
